globus-simple-ca (4.11-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-simple-ca (4.10-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400

globus-simple-ca (4.10-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-simple-ca (4.9-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 19:15:48 -0500

globus-simple-ca (4.8-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 19 Feb 2014 00:14:37 -0500

globus-simple-ca (4.7-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 23:51:10 -0500

globus-simple-ca (4.6-3+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 23:50:52 -0500

globus-simple-ca (4.6-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 23:00:45 -0500

globus-simple-ca (4.5-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 22:32:04 -0500

globus-simple-ca (4.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 22:10:46 -0500

globus-simple-ca (4.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 20:03:22 -0500

globus-simple-ca (4.4-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 15:51:57 -0500

globus-simple-ca (4.4-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes
