@@ -9,6 +9,18 @@ set -e
 # catch the kill signal (ctrl-c) and do cleanup
 trap do_trap 1 2 3 6 9 13 15
 
+CYGPATH_W="@CYGPATH_W@"
+host_os="@host_os@"
+
+alias construct_path=echo
+if test x"$CYGPATH_W" != x; then
+    case $host_os in
+        *mingw32*)
+            alias construct_path="$CYGPATH_W"
+            ;;
+    esac
+fi
+
 ##
 # create_ca_directory:
 # Creates the directory tree needed for a grid CA. The tree contains:
@@ -612,18 +624,6 @@ PACKAGE="@PACKAGE@"
 VERSION="@VERSION@"
 DIRT_TIMESTAMP="@DIRT_TIMESTAMP@"
 DIRT_BRANCH_ID="@DIRT_BRANCH_ID@"
-
-CYGPATH_W="@CYGPATH_W@"
-host_os="@host_os@"
-
-alias construct_path=echo
-if test x"$CYGPATH_W" != x; then
-    case $host_os in
-        *mingw32*)
-            alias construct_path="$CYGPATH_W"
-            ;;
-    esac
-fi
 
 short_usage="$PROGRAM_NAME [-help] [ options ...] [ openssl options ...]"
 
