@@ -1,3 +1,9 @@
+globus-simple-ca (4.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 21 Apr 2014 14:50:00 -0400
+
 globus-simple-ca (4.11-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
